--- a/Index/Table.html
+++ b/Index/Table.html
@@ -15,6 +15,25 @@
             <th>College</th>
             <th>Year</th>
         </tr>
+        <tr>
+            <td>1</td>
+            <td>Biet College</td>
+            <td>B.tech</td>
+            <td>2023</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Aditya College</td>
+            <td>Intermediate</td>
+            <td>2019</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Little buds english school</td>
+            <td>School</td>
+            <td>2017</td>
+        </tr>
     </table>
+    
 </body>
 </html>
