--- a/Index/profile.html
+++ b/Index/profile.html
@@ -7,6 +7,12 @@
         <h3>place:Bhimavaram</h3>
         <p>I have recently completed B.tech in stream of CSE from BIET college.currently pursing 
             java full stack cousre at Nareshit.My hobbies are playing games.❤️😘
+            <br>My hero Ramcharan
         </p>
+        <img src="https://www.filmibeat.com/img/2022/11/ram-charan-look-cover-1572585987-1669620973.jpg" height="100">
+
+        <br><a href="https://www.naukri.com/mnjuser/profile?id=&altresid">click me</a>
+        <p>Fav animal</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmLROY6C8hdZPVyQIRJ5kPDDe_HXEJNcBObkCWamFRpQ&s" height="200">
     </body>
 </html>
